--- a/cv01/CMakeLists.txt
+++ b/cv01/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 4.0)
-project(prvníCviko C)
+project(cv01 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(prvníCviko main.c
+add_executable(cv01 main.c
         main.c)
