--- a/cv03/CMakeLists.txt
+++ b/cv03/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 4.0)
-project(cviceni3 C)
+project(cv03 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(cviceni3 main.c)
+add_executable(cv03 main.c)
