--- a/keyfilter/CMakeLists.txt
+++ b/keyfilter/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 4.0)
-project(1bitProjekt1 C)
+project(keyfilter C)
 
 set(CMAKE_C_STANDARD 11)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror")
 
-add_executable(1bitProjekt1 keyfilter.c)
+add_executable(keyfilter keyfilter.c)
 # zapneme warnings a error při warningu
